--- a/packages/coffee_local_storage_api/pubspec.yaml
+++ b/packages/coffee_local_storage_api/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   coffee_storage_api:
     path: ../coffee_storage_api
+  file: ^6.1.4
   path: ^1.8.2
 
 dev_dependencies:
